Allow for Job Inheritance in both Java and Kotlin